public/assets/main.css
@media only screen and (min-width: 1904px){
  .container.padded {
    max-width:100%!important;
  }

  .container:not(.container--fluid) {
    max-width:1315px!important;
  }
}

iframe {
  background-color: transparent;
  border: none;
}

.v-tabs__slider {
    height: 4px!important;
}

.v-card__text, .v-card__title {
  word-break: normal; /* maybe !important  */
}

.v-list.list-actions .v-list-item .v-list-item__icon {
  margin-right: 16px;
}

/* select-sort class is used in applications and datasets lists */
.select-sort .v-input__append-outer {
  margin-top: 0px !important;
  margin-bottom: 0px !important;
}

/* darker outlined cards */
.v-application#app .theme--light.v-sheet.v-sheet--outlined {
  border: 1px solid rgba(0, 0, 0, 0.22);
}
.v-application#app .theme--light.v-sheet.also-outlined {
  border: 1px solid rgba(0, 0, 0, 0.16);
}

